# prioris

./: .gitignore  GUIDE.en.md  GUIDE.md  README.en.md  README.md  config.example.toml  config.release.toml  pyproject.toml
.github/release-notes/: latest.md  rust-latest.md  v0.4.1.md  v0.4.10.md  v0.4.11.md  v0.4.12.md  v0.4.13.md  v0.4.14.md  v0.4.2.md  v0.4.3.md  v0.4.4.md  v0.4.5.md  v0.4.6.md  v0.4.7.md  v0.4.8.md  v0.4.9.md  v0.5.0.md  v0.5.1.md  v0.5.2.md  v0.5.3.md
.github/workflows/: release-runtimes.yml  rust-standalone.yml
ObsidianVault/.obsidian/: community-plugins.json  daily-notes.json  workspace-mobile.json  workspace.json
ObsidianVault/Quotidien/: 2026-07-10.md
ObsidianVault/Synthèse/: Export.md  ThemeA.md  ThemeB.md  __Tout sujets__.md
ObsidianVault/_templates_/: Note quotidienne.md
prioris/: __init__.py  i18n.py  task_impact.py  task_revision.py
prioris/bot/: handlers.py  main.py
prioris/core/: __init__.py  axes.py  biases.py  contradictions.py  interview.py  mirror.py  planner.py  scoring.py
prioris/gui/: __init__.py  app.py  main.py
prioris/llm/: __init__.py  client.py  client_types.py  facade.py  health.py  local.py  local_gguf.py  prompts.py  shortlist.py
prioris/store/: db.py  schema.sql
prioris/vault/: export.py  info_sync.py  scan.py
runtime/llama-b10012/: libggml-base.0.16.0.dylib  libggml-cpu.0.16.0.dylib  libggml-metal.0.16.0.dylib  libllama-bench-impl.dylib  libllama-completion-impl.dylib  llama  (+15 more)
rust/: Cargo.toml  OUVRIR-MACOS.md  README.md  config.example.toml
rust/examples/: llm_smoke.rs
rust/scripts/: run.ps1  run.sh  self-test.ps1  self-test.sh
rust/src/: config.rs  gui.rs  lib.rs  llm.rs  main.rs  store.rs  telegram.rs  vault.rs
rust/src/core/: axes.rs  interview.rs  mod.rs  planner.rs  scoring.rs
rust/tests/: core_parity.rs
scripts/: install_unix.sh  install_windows.ps1  run_unix.sh  run_windows.ps1  smoke_challenge_llm.py
tests/: test_architecture.py  test_biases.py  test_bot_callbacks.py  test_confirm.py  test_contradictions.py  test_documentation_scoring.py  test_gui.py  test_interview.py  test_llm.py  test_llm_health.py  test_mirror_goals.py  test_planner.py  test_runtime_macos.py  test_rust_release_workflow.py  test_scan.py  test_scoring.py  test_store_vault.py  test_sync.py  test_task_impact.py  test_task_revision.py  test_ux.py
(+21 files in other folders)
