[project]
name = "prioris"
version = "0.4.1"
description = "Assistant personnel d'aide à la décision — MVP (scoring déterministe, Telegram, SQLite, export Obsidian)"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
