[package]
name = "prioris-rust"
version = "0.2.3"
edition = "2024"
rust-version = "1.92"
description = "Standalone native Rust port of PRIORIS"
license = "MIT"

[lib]
name = "prioris"
path = "src/lib.rs"

[[bin]]
name = "prioris"
path = "src/main.rs"

[features]
default = ["gui", "telegram"]
gui = ["dep:eframe"]
telegram = ["dep:teloxide"]
embedded-llm = ["dep:mistralrs"]
metal = ["embedded-llm", "mistralrs/metal"]
accelerate = ["embedded-llm", "mistralrs/accelerate"]

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
eframe = { version = "0.35.0", optional = true, default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
mistralrs = { version = "0.8.1", optional = true, default-features = false }
regex = "1.12.3"
rusqlite = { version = "=0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
teloxide = { version = "0.17.0", optional = true, default-features = false, features = ["ctrlc_handler", "macros", "rustls"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync"] }
toml = "1.1.2"
ureq = { version = "3.3.0", features = ["json"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.24.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
